<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="rocket"
            type="com.fernando.spacex.model.RocketModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            tools:context=".ui.RocketDetailFragment">


            <ImageView
                android:id="@+id/im_rocket_dialog"
                setImageUrl="@{rocket.imageList}"
                android:layout_width="220dp"
                android:layout_height="260dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/rocket_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{rocket.name}"
                android:textColor="@color/app_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/im_rocket_dialog"
                app:layout_constraintTop_toTopOf="@+id/im_rocket_dialog" />

            <TextView
                android:id="@+id/tv_status"
                setStatusColor="@{rocket.active}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{rocket.active ? "Active" : "Inactive"}'
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/country"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/im_rocket_dialog"
                app:layout_constraintTop_toBottomOf="@+id/im_rocket_dialog" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{rocket.country}"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/success_rate"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tv_success_rate"
                setRateText="@{rocket.successRate}"
                successRateColor="@{rocket.successRate}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_flight"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_date_flight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{rocket.firstFlight}"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cost"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/tv_price"
                convertAmount="@{rocket.costPerLaunch}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{rocket.description}"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/bt_open_wikipedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_rounded_6dp"
                android:elevation="6dp"
                android:text="@string/open_wikipedia"
                android:textColor="@color/text_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>